2009-01-29	Gene Smith <gene.smith@siemens.com>

	PR 1363/filesystem
	* libfs/src/dosfs/fat.h: Fix issue where 32 bit values are not written
	correctly in FAT f/s data.

2009-01-29	Eric Norum <norume@aps.anl.gov>

	PR 1364/cpukit
	* libcsupport/src/gxx_wrappers.c: Fix compilation problems when
	diagnostics enabled.

2009-01-23	Chris Johns <chrisj@rtems.org>

	* libmisc/shell/shell.c: Fix command line parsing of valid
	characters.

2009-01-21	Nickolay Kolchin <nbkolchin@gmail.com>
	        Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1357/cpukit
	* rtems/src/tasks.c: Ensure creating a task with no ASR is honored.

2009-01-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/src/tasks.c: Initialize event_condition to 0 just because.

2009-01-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* librpc/src/xdr/xdr_float.c: M32C has no native float but GCC soft
	float should be IEEE format.

2009-01-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/objectextendinformation.c: Fold two paths into one.

2009-01-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/src/barrier.c, rtems/src/barrierwait.c,
	rtems/src/clocktodvalidate.c, rtems/src/dpmem.c,
	rtems/src/msg.c, rtems/src/msgmp.c, rtems/src/msgqcreate.c,
	rtems/src/msgqsend.c, rtems/src/msgqurgent.c, rtems/src/part.c,
	rtems/src/partcreate.c, rtems/src/partmp.c, rtems/src/ratemon.c,
	rtems/src/region.c, rtems/src/regionmp.c, rtems/src/rtemstimer.c,
	rtems/src/sem.c, rtems/src/semcreate.c, rtems/src/semmp.c,
	rtems/src/semobtain.c, rtems/src/signalsend.c, rtems/src/taskcreate.c,
	rtems/src/taskinitusers.c, rtems/src/taskmode.c, rtems/src/taskmp.c,
	rtems/src/taskresume.c, rtems/src/tasks.c,
	rtems/src/tasksetpriority.c: Eliminate TRUE/FALSE.

2009-01-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/gxx_wrappers.c, posix/include/mqueue.h,
	posix/include/rtems/posix/semaphore.h,
	posix/inline/rtems/posix/barrier.inl,
	posix/inline/rtems/posix/key.inl,
	posix/inline/rtems/posix/mqueue.inl,